# armenian-voice-ai--bank-agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  token_server.py
armenian_voice_ai_bank_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bank_support/: answering.py  config.py  database.py  guardrails.py  models.py  prompts.py  retrieval.py
bank_support/scraping/: base.py  pipeline.py  seeds.py
client/: index.html  main.js
deploy/: docker-compose.yml  livekit.yaml  python.Dockerfile
scripts/: scrape_and_ingest.py
seeds/: banks.yaml
tests/: test_guardrails.py
